<resources>
    <string name="app_name">My Expense Manager</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan_sms">Scan SMS</string>
    <string name="action_search">Search</string>
    <string name="action_date">Date</string>
    <string name="action_range">Range</string>
    <string name="action_export">Export</string>

    <string name="placeholder">Placeholder</string>
    <string name="initializing">Initializing...</string>

    <!-- actions -->
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <!-- Messages -->


    <!-- Create Company field names -->
    <string name="title_create_company">Create Company</string>
    <string name="name">Name*</string>
    <string name="financialyearstartingfrom">Financial Year Starting from</string>
    <string name="bookstartingfrom">Book Starting from</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="pin">Pin</string>
    <string name="phonenumber">Phone Number</string>
    <string name="email">Email</string>
    <string name="aadhar">Aadhar</string>
    <string name="pan">Pan</string>
    <string name="tan">Tan</string>

    <!-- Messages -->
    <string name="err_msg_name">Name cannot be empty</string>
    <string name="err_msg_name_exists">Name already exists</string>
    <string name="err_msg_email">Invalid email address</string>
    <string name="err_msg_file_permission">Read permission required to import</string>
    <string name="err_msg_write_file_permission">Write permission required to export</string>
    <string name="err_msg_wrong_file">Could not process the file</string>
    <string name="err_msg_sms_permission">Read SMS permission required to import</string>
    <string name="msg_parsing">Parsing ...</string>
    <string name="msg_importing">Importing ...</string>
    <string name="msg_process_sms">Processing SMS ...</string>
    <string name="msg_success_import">Successfully imported</string>
    <string name="err_msg_failed_import">Failed to import</string>
    <string name="msg_sure_delete">Are you sure to delete</string>
    <string name="msg_success_create">Successfully created</string>
    <string name="msg_failed_create">Failed to create</string>
    <string name="success">Successful</string>
    <string name="failed">Failed</string>


    <!-- Company Main -->
    <string name="title_activity_company_main">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Drawer Menu Title -->
    <string name="master">Master</string>
    <string name="account">Account</string>
    <string name="group">Group</string>
    <string name="transactions">Transactions</string>
    <string name="voucher">Voucher</string>
    <string name="reports">Reports</string>
    <string name="balance_sheet">Balance Sheet</string>
    <string name="income_expense">Income &amp; Expense</string>
    <string name="imports">Imports</string>
    <string name="account_group">Account &amp; Group</string>

    <!-- Create/Update Account -->
    <string name="title_create_account">Create Account</string>
    <string name="title_update_account">Update Account</string>
    <string name="open_balance">Openning balance</string>
    <string name="debit_short">Dr</string>
    <string name="credit_short">Cr</string>
    <string name="balance_as_on">Balance as on :</string>
    <string name="title_activity_ledger_list">Ledger List</string>
    <string name="balance">Balance : </string>

    <!-- Voucher screen -->
    <string name="menu_dr">DR</string>
    <string name="menu_cr">CR</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_receipt">Receipt</string>
    <string name="menu_contra">Contra</string>
    <string name="menu_journal">Journal</string>
    <string name="menu_purchase">Purchase</string>
    <string name="menu_sales">Sales</string>

    <string name="entry">entry</string>
    <string name="particular">Particular</string>
    <string name="debit">DEBIT</string>
    <string name="credit">CREDIT</string>
    <string name="dr">Dr</string>
    <string name="cr">Cr</string>
    <string name="no">No.</string>
    <string name="total">Total</string>

    <string name="title_activity_voucher_list">Voucher List</string>
    <string name="current_balance">Current Balance</string>
    <string name="amount">Amount</string>
    <string name="narration">Narration</string>

    <!-- Voucher List -->
    <string name="search_account">Search account</string>
    <string name="title_select_range">Select range</string>
    <string name="summary">Summary :</string>

    <!-- Text -->
    <string name="space">\u0020</string>

</resources>
