<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionDr"
        android:title="@string/menu_dr"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionCr"
        android:title="@string/menu_cr"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionCheck"
        android:icon="@drawable/ic_action_done_while_48dp"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/actionPayment"
        android:title="@string/menu_payment" />
    <item
        android:id="@+id/actionReceipt"
        android:title="@string/menu_receipt" />
    <item
        android:id="@+id/actionContra"
        android:title="@string/menu_contra" />
    <item
        android:id="@+id/actionJournal"
        android:title="@string/menu_journal" />
    <item
        android:id="@+id/actionPurchase"
        android:title="@string/menu_purchase" />
    <item
        android:id="@+id/actionSales"
        android:title="@string/menu_sales" />
</menu>