<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionSearch"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/actionDate"
        android:orderInCategory="110"
        android:title="@string/action_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionRange"
        android:orderInCategory="120"
        android:title="@string/action_range"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionExport"
        android:orderInCategory="130"
        android:title="@string/action_export"
        app:showAsAction="never" />
</menu>
